# epic-miner

./: .gitmodules  Cargo.toml  README.md
config/: Cargo.toml
config/src/: config.rs  lib.rs  types.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs  miner.rs  types.rs
cuckoo-miner/: Cargo.toml
cuckoo-miner/src/: build.rs  sanity.rs
cuckoo-miner/src/config/: read.rs  types.rs
cuckoo-miner/src/cuckoo_sys/plugins/: CMakeLists.txt
cuckoo-miner/src/miner/: miner.rs  types.rs
cuckoo-miner/tests/: miner.rs  plugins.rs
cuckoo-miner/tests/common/: mod.rs
ocl_cuckaroo/: Cargo.toml
ocl_cuckatoo/: Cargo.toml
ocl_cuckatoo/src/: lib.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
progpow-miner/: Cargo.toml
progpow-miner/src/: miner.rs
randomx-miner/: Cargo.toml
randomx-miner/src/: miner.rs
util/: Cargo.toml
util/src/: lib.rs  logger.rs
