[package]
name = "ocl_cuckaroo"
version = "1.0.2"
workspace = ".."
edition = "2021"

[features]
profile = []


[dependencies]
epic_miner_plugin = { path = "../plugin", version = "1.0.2" }
ocl = "0.19.7"
hashbrown = "0.1"
libc = "0.2.169"
blake2-rfc = "0.2"
byteorder = "1"


[lib]
name = "ocl_cuckaroo"
crate-type = ["cdylib", "rlib"]
