[package]
name = "ocl_cuckatoo"
version = "1.0.2"
edition = "2021"
workspace = ".."

[dependencies]
epic_miner_plugin = { path = "../plugin", version = "1.0.2" }
ocl = "0.19.7"
hashbrown = "0.1"
libc = "0.2.169"
blake2-rfc = "0.2"
byteorder = "1"

[lib]
name = "ocl_cuckatoo"
crate-type = ["cdylib", "rlib"]
